--- a/index.html
+++ b/index.html
@@ -5,31 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio (Version 3.0)</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/index.html">Web<span>Studio</span></a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+    <header class="header">
+      <nav class="header-navigation">
+        <a href="./index.html" class="header-logo"
+          ><span class="header-logo-accent">Web</span>Studio
+        </a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="./index.html" class="header-link link link-current"
+              >Studio</a
+            >
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="header-item">
+            <a href="" class="header-link link">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="header-item">
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-contact">
+        <ul class="header-contact-list list">
+          <li class="header-contact-item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-contact-email link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contact-item">
+            <a href="tel:+110001111111" class="header-contact-tel link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
-    <main>
+    <main class="main">
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
@@ -142,7 +163,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
