--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo"
-          ><span class="header-logo-accent">Web</span>Studio
+        <a href="./index.html" class="header-logo link"
+          ><span class="header-logo-accent">WEB</span>STUDIO
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -51,63 +51,63 @@
       </address>
     </header>
     <main class="main">
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
-      <section>
-        <h2>Our Core Competencies</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="strategy">
+        <h2 class="strategy-tiltle visually-hidden">Strategy</h2>
+        <ul class="stretegy-list list">
+          <li class="stretegy-item">
+            <h3 class="stategy-item-subtitle">Strategy</h3>
+            <p class="strategy-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="stretegy-item">
+            <h3 class="stategy-item-subtitle">Punctuality</h3>
+            <p class="strategy-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="stretegy-item">
+            <h3 class="stategy-item-subtitle">Diligence</h3>
+            <p class="strategy-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="stretegy-item">
+            <h3 class="stategy-item-subtitle">Technologies</h3>
+            <p class="strategy-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="about">
+        <h2 class="about-title">What are we doing</h2>
+        <ul class="about-list list">
+          <li class="about-item">
             <img
               src="./images/img_desktop_apps.jpg"
-              alt="desktop_apps"
+              alt="desktop-apps"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/img_mobile_apps.jpg"
-              alt="mobile_apps"
+              alt="mobile-apps"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/img_integration.jpg"
               alt="integration"
@@ -117,55 +117,57 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/img_team_member_1.jpg"
-              alt="team_member"
+              alt="team-member"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member">Mark Guerrero</h3>
+            <p class="team-member-title">Product Designer</p>
           </li>
           <li>
             <img
               src="./images/img_team_member_2.jpg"
-              alt="team_member"
+              alt="team-member"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member">Tom Ford</h3>
+            <p class="team-member-title">Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images/img_team_member_3.jpg"
-              alt="team_member"
+              alt="team-member"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member">Camila Garcia</h3>
+            <p class="team-member-title">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/img_team_member_4.jpg"
-              alt="team_member"
+              alt="team-member"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member">Daniel Wilson</h3>
+            <p class="team-member-title">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="footer-logo link"
+        ><span class="footer-logo-accent">WEB</span>STUDIO
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
