--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link"
+        <a href="./index.html" class="header-logo link logo-text"
           ><span class="header-logo-accent">WEB</span>STUDIO
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link link link-current"
+            <a
+              href="./index.html"
+              class="header-link link link-current regular-text"
               >Studio</a
             >
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+            <a href="./portfolio.html" class="header-link link regular-text"
+              >Portfolio</a
+            >
           </li>
           <li class="header-item">
-            <a href="" class="header-link link">Contacts</a>
+            <a href="" class="header-link link regular-text">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -38,12 +42,14 @@
           <li class="header-contact-item">
             <a
               href="mailto:info@devstudio.com"
-              class="header-contact-email link"
+              class="header-contact-email link regular-text"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a href="tel:+110001111111" class="header-contact-tel link"
+            <a
+              href="tel:+110001111111"
+              class="header-contact-tel link regular-text"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -53,35 +59,35 @@
     <main class="main">
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <button type="button" class="hero-button button">Order Service</button>
       </section>
       <section class="strategy">
         <h2 class="strategy-tiltle visually-hidden">Strategy</h2>
         <ul class="stretegy-list list">
           <li class="stretegy-item">
-            <h3 class="stategy-item-subtitle">Strategy</h3>
-            <p class="strategy-item-text">
+            <h3 class="stategy-item-subtitle subtitle-text">Strategy</h3>
+            <p class="strategy-item-text regular-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="stretegy-item">
-            <h3 class="stategy-item-subtitle">Punctuality</h3>
-            <p class="strategy-item-text">
+            <h3 class="stategy-item-subtitle subtitle-text">Punctuality</h3>
+            <p class="strategy-item-text regular-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="stretegy-item">
-            <h3 class="stategy-item-subtitle">Diligence</h3>
-            <p class="strategy-item-text">
+            <h3 class="stategy-item-subtitle subtitle-text">Diligence</h3>
+            <p class="strategy-item-text regular-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="stretegy-item">
-            <h3 class="stategy-item-subtitle">Technologies</h3>
-            <p class="strategy-item-text">
+            <h3 class="stategy-item-subtitle subtitle-text">Technologies</h3>
+            <p class="strategy-item-text regular-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -127,8 +133,8 @@
               width="264"
               height="260"
             />
-            <h3 class="team-member">Mark Guerrero</h3>
-            <p class="team-member-title">Product Designer</p>
+            <h3 class="team-member subtitle-text">Mark Guerrero</h3>
+            <p class="team-member-title regular-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -137,8 +143,8 @@
               width="264"
               height="260"
             />
-            <h3 class="team-member">Tom Ford</h3>
-            <p class="team-member-title">Frontend Developer</p>
+            <h3 class="team-member subtitle-text">Tom Ford</h3>
+            <p class="team-member-title regular-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -147,8 +153,8 @@
               width="264"
               height="260"
             />
-            <h3 class="team-member">Camila Garcia</h3>
-            <p class="team-member-title">Marketing</p>
+            <h3 class="team-member subtitle-text">Camila Garcia</h3>
+            <p class="team-member-title regular-text">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -157,17 +163,17 @@
               width="264"
               height="260"
             />
-            <h3 class="team-member">Daniel Wilson</h3>
-            <p class="team-member-title">UI Designer</p>
+            <h3 class="team-member subtitle-text">Daniel Wilson</h3>
+            <p class="team-member-title regular-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
+      <a href="./index.html" class="footer-logo link logo-text"
         ><span class="footer-logo-accent">WEB</span>STUDIO
       </a>
-      <p class="footer-text">
+      <p class="footer-text regular-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
