--- a/portfolio.html
+++ b/portfolio.html
@@ -16,18 +16,22 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link"
+        <a href="./index.html" class="header-logo link logo-text"
           ><span class="header-logo-accent">WEB</span>STUDIO
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link link">Studio</a>
+            <a href="./index.html" class="header-link link regular-text"
+              >Studio</a
+            >
           </li>
           <li class="header-item">
-            <a href="" class="header-link link link link-current">Portfolio</a>
+            <a href="" class="header-link link link-current regular-text"
+              >Portfolio</a
+            >
           </li>
           <li class="header-item">
-            <a href="" class="header-link link">Contacts</a>
+            <a href="" class="header-link link regular-text">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -36,12 +40,14 @@
           <li class="header-contact-item">
             <a
               href="mailto:info@devstudio.com"
-              class="header-contact-email link"
+              class="header-contact-email link regular-text"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a href="tel:+110001111111" class="header-contact-tel link"
+            <a
+              href="tel:+110001111111"
+              class="header-contact-tel link regular-text"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -49,35 +55,36 @@
       </address>
     </header>
     <main class="main">
-      <h1 class="portfolio visually-hidden">Portfolio</h1>
-      <section class="portfolio-filter">
+      <section class="portfolio">
+        <h1 class="portfolio-title visually-hidden">Portfolio</h1>
         <ul class="portfolio-filter-list list">
           <li class="portfolio-filter-item">
-            <button type="button" class="portfolio-filter-button">all</button>
+            <button type="button" class="portfolio-filter-button button">
+              all
+            </button>
           </li>
           <li class="portfolio-filter-item">
-            <button type="button" class="portfolio-filter-button">
+            <button type="button" class="portfolio-filter-button button">
               web sites
             </button>
           </li>
           <li class="portfolio-filter-item">
-            <button type="button" class="portfolio-filter-button">app</button>
+            <button type="button" class="portfolio-filter-button button">
+              app
+            </button>
           </li>
           <li class="portfolio-filter-item">
-            <button type="button" class="portfolio-filter-button">
+            <button type="button" class="portfolio-filter-button button">
               design
             </button>
           </li>
           <li class="portfolio-filter-item">
-            <button type="button" class="portfolio-filter-button">
+            <button type="button" class="portfolio-filter-button button">
               marketing
             </button>
           </li>
         </ul>
-      </section>
-      <section class="ourwork">
-        <h2 class="ourwork-title visually-hidden">Our works</h2>
-        <ul class="ourworklist list">
+        <ul class="ourwork-list list">
           <li class="ourwork-item">
             <a href="" class="ourwork-link link">
               <img
@@ -86,9 +93,11 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Banking App Interface Concept</h3>
-              <p class="ourwork-category">App</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">
+                Banking App Interface Concept
+              </h3>
+              <p class="ourwork-category regular-text">App</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -103,9 +112,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Cashless Payment</h3>
-              <p class="ourwork-category">Marketing</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Cashless Payment</h3>
+              <p class="ourwork-category regular-text">Marketing</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -120,9 +129,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Meditaion App</h3>
-              <p class="ourwork-category">App</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Meditaion App</h3>
+              <p class="ourwork-category regular-text">App</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -137,9 +146,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Taxi Service</h3>
-              <p class="ourwork-category">Marketing</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Taxi Service</h3>
+              <p class="ourwork-category regular-text">Marketing</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -154,9 +163,11 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Screen Illustrations</h3>
-              <p class="ourwork-category">Design</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">
+                Screen Illustrations
+              </h3>
+              <p class="ourwork-category regular-text">Design</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -171,9 +182,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Online Courses</h3>
-              <p class="ourwork-category">Marketing</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Online Courses</h3>
+              <p class="ourwork-category regular-text">Marketing</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -188,9 +199,11 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Instagram Stories Concept</h3>
-              <p class="ourwork-category">Design</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">
+                Instagram Stories Concept
+              </h3>
+              <p class="ourwork-category regular-text">Design</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -205,9 +218,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Organic Food</h3>
-              <p class="ourwork-category">Web Site</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Organic Food</h3>
+              <p class="ourwork-category regular-text">Web Site</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -222,9 +235,9 @@
                 width="360"
                 height="300"
               />
-              <h3 class="ourwork-subtitle">Fresh Coffee</h3>
-              <p class="ourwork-category">Web Site</p>
-              <p class="ourwork-description">
+              <h3 class="ourwork-subtitle subtitle-text">Fresh Coffee</h3>
+              <p class="ourwork-category regular-text">Web Site</p>
+              <p class="ourwork-description regular-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -235,10 +248,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
+      <a href="./index.html" class="footer-logo link logo-text"
         ><span class="footer-logo-accent">WEB</span>STUDIO
       </a>
-      <p class="footer-text">
+      <p class="footer-text regular-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
